<resources>
    <string name="app_name">room</string>
    <string name="add">Add</string>
    <string name="age">Age</string>
    <string name="first_name"> Name</string>
    <string name="Email">Email</string>
    <string name="update">Update</string>
    <string name="ID">ID</string>
    <string name="mob_no">Mobile No</string>
    <string name="enterusernfo">Enter User Info</string>
    <string name="login_email_hint">Email</string>
    <string name="name" >Name</string>
    <string name="uid">Id</string>
    <string name="address">Email Addres</string>
    <string name="contact_number">Contact Number</string>
    <string name="contact_support1">03150632654</string>

    <string name="message">Click on Floating Action Button</string>
    <string name="search">Search</string>

</resources>