<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:id="@+id/manlay"
    android:layout_height="wrap_content"
    android:layout_margin="5.0dip"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="5.0dip"
    app:cardElevation="2.0dip">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5.0dip">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1.0">

            <ImageView
                android:id="@id/user_img"
                android:layout_width="0.0dip"
                android:layout_height="120.0dip"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.3"
                android:padding="8.0dip"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_baseline_person_24" />

            <LinearLayout
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="5.0dip"
                android:layout_marginLeft="5.0dip"
                android:layout_weight="0.7"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical">

                    <LinearLayout
                        android:id="@id/llname"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_toStartOf="@id/ll_mid"
                        android:layout_toLeftOf="@id/ll_mid"
                        android:gravity="center_vertical"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:paddingStart="5.0dip"
                            android:paddingLeft="5.0dip"
                            android:text="@string/name"
                            android:textColor="@color/Gray"
                            android:textSize="16.0sp" />

                        <TextView
                            android:id="@id/u_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:hint="NA"
                            android:paddingStart="5.0dip"
                            android:paddingLeft="5.0dip"
                            android:singleLine="true"
                            android:text=""
                            android:textColor="@color/black"
                            android:textColorHint="@color/black"
                            android:textSize="14.0sp" />
                    </LinearLayout>

                    <RelativeLayout
                        android:id="@id/ll_mid"
                        android:layout_width="42.0dip"
                        android:layout_height="42.0dip"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="5.0dip"
                        android:layout_marginRight="5.0dip">



                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView

                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="ID"
                                android:textColor="@color/black"

                                android:textSize="15sp" />

                            <TextView
                                android:id="@id/tv_mid"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="@string/uid"
                                android:textColorHint="@color/black"
                                android:textStyle="bold"
                                android:textColor="@color/black"
                                android:textSize="15sp" />
                        </LinearLayout>
                    </RelativeLayout>


                </RelativeLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3.0dip"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:paddingStart="5.0dip"
                        android:paddingLeft="5.0dip"
                        android:text="@string/address"
                        android:textColor="@color/Gray"
                        android:textSize="15.0sp" />

                    <TextView
                        android:id="@id/u_emailaddress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:hint="Email"
                        android:paddingStart="5.0dip"
                        android:paddingLeft="5.0dip"
                        android:text="Email"
                        android:textColor="@color/black"
                        android:textSize="14.0sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="1.0">

                    <LinearLayout
                        android:id="@id/llcall"
                        android:layout_width="0.0dip"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3.0dip"
                        android:layout_weight="0.6"
                        android:gravity="center_vertical"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:paddingStart="5.0dip"
                            android:paddingLeft="5.0dip"
                            android:text="@string/contact_number"
                            android:textColor="@color/Gray"
                            android:textSize="15.0sp" />

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:paddingStart="5.0dip"
                            android:paddingLeft="5.0dip">

                            <ImageView
                                android:layout_width="20.0dip"
                                android:layout_height="fill_parent"

                                app:srcCompat="@drawable/ic_baseline_call_24"
                                />

                            <TextView
                                android:id="@id/u_contact_number"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center_vertical"
                                android:hint="NA"
                                android:singleLine="true"
                                android:text="@string/contact_support1"
                                android:textColor="@android:color/holo_blue_dark"
                                android:textSize="14.0sp" />
                        </LinearLayout>
                    </LinearLayout>


                </LinearLayout>
            </LinearLayout>
        </LinearLayout>



        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0dip"
            android:layout_marginTop="2.0dip"
            android:alpha="0.2"
            android:background="@color/black" />



        </LinearLayout>


    </androidx.cardview.widget.CardView>
